# Online_clicker

./: .flake8  .gitignore  MANIFEST.in  README.md  devreq.txt  dodo.py  insertion_deleting_sqlite.py  pyproject.toml  requirements.txt  setup.cfg
ClickerMSU/: Button.py  Option.py  __init__.py  __main__.py  discrtteesstt.py  input.py  insertion_deleting_sqlite.py  restricted_area.py
clickermsu/: .flake8  Button.py  Option.py  __init__.py  __main__.py  input.py  insertion_deleting_sqlite.py  users.db
docs/: Tech_documentation.rst  User_documentation.rst  button.rst  conf.py  index.rst  init.rst  input.rst  option.rst  telegram.rst  user_page.rst
main/: Button.py  __init__.py  __main__.py  game.py  input.py  insertion_deleting_sqlite.py
po/ru/LC_MESSAGES/: Clicker.po
tests/: __init__.py
