[metadata]
name = ClickerMSU
version = 1.0.0
url = https://git.cs.msu.ru/s02190234/clickermsu
author = Dmitriy Khasanov, Ivan Ushakov
author_email = s02190234@gse.cs.msu.ru, s02190226@gse.cs.msu.ru
description = Exam project for PythonDevelopment2021 course
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ClickerMSU
include_package_data = True
install_requires =
    pygame>=2.1.2
    pygame-widgets>=1.0.0
    pyTelegramBotAPI>=4.5.1

[options.entry_points]
console_scripts =
    ClickerMSU = ClickerMSU.__main__:main

[options.package_data]
ClickerMSU = 
    */*/Clicker.mo
    images/*
    music/*